# advent_of_code_2024

./: pyproject.toml
advent_2024/day_1/: part_1.py  part_2.py
advent_2024/day_2/: part_1.py  part_2.py
advent_2024/day_3/: part_1.sh  part_2.sh
advent_2024/day_4/: part_1.py  part_2.py
advent_2024/day_5/: parts.py
advent_2024/day_6/: part_1.py  part_2.py
advent_2024/day_7/: parts.py
advent_2024/day_8/: parts.py
