[tool.poetry]
name = "advent-2024"
version = "0.1.0"
description = "Advent of Code 2024"
authors = ["cyrille <113944069+cyrille-co2ai@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
